scribble-test/src/test/resources/bad/syntax/disamb/globals/gmessagetransfer/GMessageTransfer01.scr
module bad.syntax.disamb.globals.gmessagetransfer.GMessageTransfer01;


global protocol Foo(role A)
{
	1() from A to A;  // TODO: should be good
}
